# C-GTK

./: .gitignore  README.md
Building/: TOC.md
Building/CMake/: .ninja_deps  .ninja_log  CMake.md  CMakeLists.txt
Building/Make/: Make.md  Makefile  Makefile_tput
Building/Meson/: Meson.md  Meson.txt
Building/Meson/Plain C Example/: main.c
Building/POSIX-Shell/: Shell.md  compile.sh  main.c
